landing page done

--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" dir="rtl">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.salla.network/fonts/pingarlt.css?v=0.2"
+    />
+    <link
+      href="https://cdn.salla.network/fonts/hugeicons-font.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/src/index.css" />
+
     <title>Vite + React + TS</title>
   </head>
   <body>
+    <script type="systemjs-importmap">
+      {
+        "imports": {
+          "@salla.sa/ui-merchant-styles": "/node_modules/@salla.sa/ui-merchant-styles/dist/salla-styles.js"
+        }
+      }
+    </script>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
